# client

./: .gitattributes  .gitignore  Makefile  client.json  client.windows.json  data.json  data.windows.json  download_and_update.py  mods.json  mods.windows.json  modules.json  modules.windows.json  pyproject.toml
.github/: download_and_update.py
.github/workflows/: download_and_update.yml  release.yml
client/modules/game_shaders/: shaders.html
client/modules/game_shaders/shaders/vertex/: default.vert
client/modules/modulelib/: html.css
client/tempDir/mods/: .gitignore
client/tempDir/modules/game_shaders/shaders/core/vertex/: default.vert
client/tempDir/modules/game_shaders/shaders/fragment/: party.frag  pulse.frag
release_manager/: __main__.py  release.py
tempDir/modules/.project/: modules.sublime-project
tempDir/modules/game_blessing/: blessing.html
tempDir/modules/game_shaders/shaders/fragment/: bloom.frag  fog.frag  grayscale.frag  heat.frag  noise.frag  outline.frag  rain.frag  snow.frag
windows/: client.windows.json  data.windows.json  mods.windows.json  modules.windows.json
windows/client/data/things/1098/: Tibia.otfi  Tibia.spr  credits.txt
windows/client/modules/game_shaders/shaders/fragment/: cyclopedia.frag  oldtv.frag  radialblur.frag  rain.frag  sepia.frag  zomg.frag
