[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordan.hoare@outlook.com>"]
packages = [{include = "release_manager"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
isort = "^5.13.2"
mypy = "^1.9.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
exclude = ["venv"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    "__init__.py", 
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
